<resources>
    <string name="app_name">MyNetflex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Judul Film/Shows</string>
    <string name="shows">TV SHOWS</string>
    <string name="movies">MOVIES</string>
    <string name="menu_favorite">Favorite</string>
    <string name="titlefav">FAVORITE LIST</string>
    <string name="message_undo">Urungkan Aksi?</string>
    <string name="message_ok">Urungkan</string>
</resources>